Fix CSS formatting and add color to anchor tags

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-
-body{
+body {
   background-color: #013066;
   font-family: 'Playwrite NZ Basic', sans-serif;
-  weight: 400;
-  color: #f0f0f0;
-}
-a{
-  text-decoration: none;
+  font-weight: 400;
 }
 
+a {
+  text-decoration: none;
+  color: #f0f0f0;
+}
